# cprojects

./: usrmgr.c
.github/workflows/: cmake.yml
c_fetch/: cfetch.c  compile_commands.json  launch.json
crappybar/: CMakeLists.txt  compile_commands.json
crappybar/lib/: app.c  app.h
crappybar/src/: main.c
flexfetch/: PKGBUILD  flexfetch.c  source.fish
gui_editor/: launch.json
gui_editor/lib/: app.c
gui_editor/src/: main.c
